--- a/css/tablet.css
+++ b/css/tablet.css
@@ -14,12 +14,12 @@
     /* SECTION 2 (about me section */
     .green-background {
         width: 20rem;
-        height: 40rem;
+        height: 42.5rem;
     }
 
     .info-card {
         margin-left: 8rem;
-        margin-top: 20rem;
+        margin-top: 6rem;
         height: 30rem;
         width: 20rem;
     }
@@ -32,7 +32,8 @@
     .about-me-text {
         width: 16rem;
         margin-left: 30rem;
-        margin-top: 20rem;
+        margin-top: 6rem;
+        margin-right: 1rem;
     }
 
     .about-me-pic {
